<resources>
    <string name="app_name">Yourtube</string>
    <string name="c1">/@navalkumarshukla9447 4 years ago I like the way he kept things simple and easy... also light by cracking some jokes in between</string>
    <string name="c2">sonukosuno6803 5 years ago Bhai ek video banao jisme aap apne baare me kuch btao.... So excited to know</string>
    <string name="c3">midhilajnisam2900 5 years agoSeriously u r doing a great job sir..️Any plans on making a video series of Data structures and algorithms in C programming?

</string>
    <string name="c4">surendrasaini6422 5 years ago Aapki videos aane wale samay me bhut helpful rahegi jab log android studio ke baare me hindi me khojenge ..... 👍👍👍

</string>
    <string name="c5">fatimaiqra2169 2 years ago i like the way you teach us....its not boring....thanks </string>
    <string name="c6">imfarruk  5 years agoI learned python, little bit django because  of u bro.. Love uPlease make ur next video on angular js.

</string>

</resources>